# vanity

./: .gitignore  .justfile  AGENTS.md  CHANGELOG  LICENSE  README.md  flake.nix  fourmolu.yaml  hie.yaml  vanity.cabal
.github/: dependabot.yml
.github/workflows/: cron-zizmor.yml  nix.yml  update_flake_lock.yml  zizmor.yml
app/: Main.hs
bench/: Main.hs
cbits/: common.h  vanity_gpu.h  wgpu_vanity.c  wgpu_vanity.h
cbits/cuda/: kernels.cuh  vanity_kernel.cu
cbits/encoding/: base58.c  base58.h  bech32.c  bech32.h
cbits/hash/: ripemd160.c  ripemd160.h  sha256.c  sha256.h
cbits/secp256k1/: ecmult.c  ecmult.h  field.c  field.h  group.c  group.h  scalar.c  scalar.h
lib/Crypto/Bitcoin/: Vanity.hs
lib/Crypto/Bitcoin/Vanity/: Address.hs  Key.hs  Pattern.hs  Types.hs  Worker.hs
lib/Crypto/Bitcoin/Vanity/Address/: Base58.hs  Bech32.hs  Bech32m.hs
lib/Crypto/Bitcoin/Vanity/FFI/: CUDA.hsc  WGPU.hsc
lib/Crypto/Bitcoin/Vanity/Worker/: CPU.hs  CUDA.hs  WGPU.hs
shaders/: ecmult_hybrid.wgsl  ecmult_only.wgsl  encoding.wgsl  field.wgsl  hash.wgsl  secp256k1.wgsl  test_pipeline.wgsl  vanity_pipeline.wgsl
test/: Arbitrary.hs  Main.hs
