cabal-version:   3.0
name:            vanity
version:         0.2.0
synopsis:        Blazingly fast Bitcoin vanity address generator
license:         MIT
license-file:    LICENSE
author:          Jose Storopoli
maintainer:      jose@storopoli.com
homepage:        https://github.com/storopoli/vanity
category:        Cryptography
build-type:      Simple
tested-with:     GHC ==9.10.3
extra-doc-files:
  CHANGELOG
  README.md

description:
  Pure Haskell Bitcoin vanity address generator with GPU acceleration support.
  Supports P2PKH (Base58), P2WPKH (Bech32), and P2TR (Bech32m) addresses
  on mainnet and testnet with regex pattern matching.

source-repository head
  type:     git
  location: github.com/storopoli/vanity.git

flag cuda
  description: Enable CUDA GPU backend
  default:     False
  manual:      True

flag wgpu
  description: Enable WGPU (Metal/Vulkan) GPU backend
  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  exposed-modules:
    Crypto.Bitcoin.Vanity
    Crypto.Bitcoin.Vanity.Address
    Crypto.Bitcoin.Vanity.Key
    Crypto.Bitcoin.Vanity.Pattern
    Crypto.Bitcoin.Vanity.Types
    Crypto.Bitcoin.Vanity.Worker

  other-modules:
    Crypto.Bitcoin.Vanity.Address.Base58
    Crypto.Bitcoin.Vanity.Address.Bech32
    Crypto.Bitcoin.Vanity.Address.Bech32m
    Crypto.Bitcoin.Vanity.Worker.CPU

  build-depends:
    , async           >=2.2  && <2.3
    , base            >=4.19 && <5
    , bytestring      >=0.11 && <0.13
    , deepseq         >=1.4  && <1.6
    , entropy         >=0.4  && <0.5
    , ppad-base58     >=0.2  && <0.3
    , ppad-bech32     >=0.2  && <0.3
    , ppad-ripemd160  >=0.1  && <0.2
    , ppad-secp256k1  >=0.5  && <0.6
    , ppad-sha256     >=0.2  && <0.3
    , regex-tdfa      >=1.3  && <1.4
    , stm             >=2.5  && <2.6
    , text            >=2.0  && <2.2

  if flag(cuda)
    exposed-modules: Crypto.Bitcoin.Vanity.Worker.CUDA
    other-modules:   Crypto.Bitcoin.Vanity.FFI.CUDA
    build-depends:   cuda >=0.11 && <0.12
    cpp-options:     -DCUDA_ENABLED
    include-dirs:    cbits
    c-sources:
      cbits/encoding/base58.c
      cbits/encoding/bech32.c
      cbits/hash/ripemd160.c
      cbits/hash/sha256.c
      cbits/secp256k1/ecmult.c
      cbits/secp256k1/field.c
      cbits/secp256k1/group.c
      cbits/secp256k1/scalar.c

    -- Note: CUDA .cu files require nvcc compilation via custom Setup.hs
    extra-libraries:
      cuda
      cudart

  if flag(wgpu)
    exposed-modules: Crypto.Bitcoin.Vanity.Worker.WGPU
    other-modules:   Crypto.Bitcoin.Vanity.FFI.WGPU
    build-depends:   random >=1.2 && <1.3
    cpp-options:     -DWGPU_ENABLED
    include-dirs:    cbits
    c-sources:       cbits/wgpu_vanity.c

    -- Link against wgpu-native library
    if os(osx)
      extra-lib-dirs:  /opt/homebrew/lib
      include-dirs:    /opt/homebrew/include cbits
      extra-libraries: wgpu_native
      frameworks:      Metal QuartzCore

    if os(linux)
      extra-libraries: wgpu_native

    if os(windows)
      extra-libraries: wgpu_native

-- Note: WGSL shaders are in shaders/ directory

executable vanity
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base                  >=4.19 && <5
    , bytestring
    , optparse-applicative  >=0.18 && <0.19
    , text
    , vanity

test-suite vanity-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Arbitrary
  ghc-options:      -threaded -rtsopts
  build-depends:
    , base               >=4.19 && <5
    , base16-bytestring  >=1.0  && <1.1
    , bytestring
    , ppad-secp256k1
    , QuickCheck         >=2.14 && <2.16
    , tasty              >=1.4  && <1.6
    , tasty-hunit        >=0.10 && <0.11
    , tasty-quickcheck   >=0.10 && <0.12
    , text
    , vanity

benchmark vanity-bench
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   bench
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base            >=4.19 && <5
    , bytestring
    , criterion       >=1.6  && <1.7
    , deepseq
    , ppad-secp256k1
    , text
    , vanity
